--- a/W3/Int.html
+++ b/W3/Int.html
@@ -19,10 +19,10 @@
     <!--  araya çizgi ekle -->
     <!-- resim ekleme -->
     <img
-      src="Olaf_Snowman-wallpaper-10112423.jpg"
+      src="/pexels-luis-del-río-15286.jpg"
       width="104"
       height="135"
-      alt="Olaf_Snowman"
+      alt="Orman"
     />
 
     <p style="color: rgb(218, 120, 40)">Bu paragraf renkli yazıldı</p>
