--- a/Ders Tekrarları/Tablo/Forms.html
+++ b/Ders Tekrarları/Tablo/Forms.html
@@ -6,7 +6,7 @@
     <title>Bilgi Form</title>
   </head>
   <body>
-    <table style="background-color: rgb(240, 174, 180);">
+    <table b style="background-color: rgb(240, 174, 180);">
       <tbody>
         <tr>
           <td > 
@@ -76,7 +76,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td><input type="button" value="Kayıt Ol" style="background-color: blueviolet;color: aliceblue;"></td></tr>
+            <td><input type="submit" value="Kayıt Ol" style="background-color: blueviolet;color: aliceblue;"></td></tr>
         </tr>
         </tr>
       </tbody>
