--- a/webpages/index.html
+++ b/webpages/index.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/webpages/reset.css" />
     <link rel="stylesheet" href="/webpages/style.css" />
   </head>
@@ -39,7 +43,7 @@
 
     <nav class="head2">
       <div class="logodiv">
-        <img src="/webpages/img/logo.png" alt="logo" title="B192" /><h3>D&2</h3>
+        <img src="/webpages/img/abstract-architectural-building-by-jaysonqbob-brandcrowd.png" alt="logo" title="B192" /><h3>D&2</h3>
       </div>
 
       <div class="calldiv">
@@ -71,7 +75,7 @@
       <nav class="menubar1">
         <div class="home">
           <a href="#"><i class="fa-solid fa-igloo"></i></a></div>
-        <div>
+        <div class="menu">
           <ul>
             <li class="hover service">
               Services <i class="fa-solid fa-sort-down"></i>
@@ -131,7 +135,7 @@
         </div>
         <div class="shopping">
           <a href="#"><i class="fa-solid fa-cart-shopping"> 
-            &nbsp</i></a>
+            &nbsp</i></a> 
           <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
           
         </div>
@@ -141,13 +145,11 @@
       <nav class="menubar2">
         <h2>Decoration & Furviture</h2>
         <h3>Living Room</h3>
-        <pre>  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-  Id eligendi architecto dolorum doloribus nemo 
-  perferendis ea porro consectetur, 
-  atque officiis saepe laudantium 
-  reiciendis earum qui molestias praesentium fuga voluptatibus?</pre>
+        <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eligendi architecto dolorum doloribus nemo 
+        perferendis ea porro consectetur, atque officiis saepe audantium 
+        reiciendis earum qui molestias praesentium fuga voluptatibus?</p>
 
-<nav><button>Read More</button>
+    <nav><button>Read More</button>
         <button class="servicebtn">Our Services</button></nav>
         
       </nav>
