--- a/ödevler/hesap makinesi/HesapMakinesi.html
+++ b/ödevler/hesap makinesi/HesapMakinesi.html
@@ -19,9 +19,9 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-3">
+        <div class="col-6">
           <h1>Hesap Makinesi</h1>
-          <table class="table table-success table-striped p-">
+          <table class="table table-success  ">
             <thead>
               <th class="text-end" colspan="4">
                 <h2 class="text-success" id="sonuc">0</h2>
@@ -29,7 +29,7 @@
             </thead>
             <tbody class="text-center">
               <tr>
-                <td colspan="4" class="text-start ps-4">
+                <td colspan="4" class="text-start ">
                   <button
                     type="button"
                     class="text-start btn btn-dark rounded-circle"
