--- a/Bootstrap-WebP/Turkish-Delight.html
+++ b/Bootstrap-WebP/Turkish-Delight.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    
 
     <title>Turkish Delight</title>
     <link rel="stylesheet" href="/Bootstrap-WebP/reset.css" />
@@ -501,20 +502,20 @@
               <li class="list1 list-unstyled text-center">
                 <ol class="list-unstyled text-center mt-4 py-2">
                   <li class="m-2 p-1">
-                    <a href="#" class="link-dark text-decoration-none ">🍬Lokma </a>
+                    <a href="#" class="link-dark text-decoration-none "><i class="bi bi-balloon"></i>Lokma </a>
                   </li>
                   <li class="m-2 p-1">
-                    <a href="#" class="link-dark text-decoration-none">🍬Baklava </a>
+                    <a href="#" class="link-dark text-decoration-none"><i class="bi bi-balloon"></i>Baklava </a>
                   </li>
                   <li class="m-2 p-1">
-                    <a href="#" class="link-dark text-decoration-none ">🍬Kadayıf </a>
+                    <a href="#" class="link-dark text-decoration-none "><i class="bi bi-balloon"></i>Kadayıf </a>
                   </li>
 
                   <li class="m-2 p-1">
-                    <a href="#" class="link-dark  text-decoration-none">🍬Güllaç</a>
+                    <a href="#" class="link-dark  text-decoration-none"><i class="bi bi-balloon"></i>Güllaç</a>
                   </li>
                   <li class="m-2 p-1">
-                    <a href="#" class="link-dark text-decoration-none">🍬Sütlaç</a>
+                    <a href="#" class="link-dark text-decoration-none"><i class="bi bi-balloon"></i>Sütlaç</a>
                   </li>
                 </ol>
               </li>
@@ -526,29 +527,29 @@
               <li class="list2 list-unstyled text-center">
                 <ol class="list-unstyled text-center mt-4 py-2">
                   <li class="m-2 p-1">
-                    <a href="#" class="link-dark text-decoration-none">🧁Mochi (Japon)</a>
+                    <a href="#" class="link-dark text-decoration-none"><i class="bi bi-snow2"></i>Mochi (Japon)</a>
                   </li>
                   <li class="m-2 p-1">
                     <a href="#" class="link-dark text-decoration-none"
-                      >🧁Bûche de Noël (Fransız)
+                      ><i class="bi bi-snow2"></i>Bûche de Noël (Fransız)
                     </a>
                   </li>
                   <li class="m-2 p-1">
                     <a href="#" class="link-dark text-decoration-none"
-                      >🧁Trdelník (Çek Cumhuriyeti)
+                      ><i class="bi bi-snow2"></i>Trdelník (Çek Cumhuriyeti)
                     </a>
                   </li>
                   <li class="m-2 p-1">
-                    <a href="#" class="link-dark text-decoration-none">🧁Kanelbulle (İsveç)</a>
+                    <a href="#" class="link-dark text-decoration-none"><i class="bi bi-snow2"></i>Kanelbulle (İsveç)</a>
                   </li>
                   <li class="m-2 p-1">
                     <a href="#" class="link-dark text-decoration-none">
-                      🧁Gulab Jamun (Hint)</a
+                      <i class="bi bi-snow2"></i>Gulab Jamun (Hint)</a
                     >
                   </li>
                   <li class="m-2 p-1">
                     <a href="#" class="link-dark text-decoration-none">
-                      🧁Tiramisu (İtalyan)
+                      <i class="bi bi-snow2"></i>Tiramisu (İtalyan)
                     </a>
                   </li>
                 </ol>
