--- a/ödevler/average/index.html
+++ b/ödevler/average/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <div class="container col-md-8 col-lg-7 col-xl-6 col-xxl-4 p-5 m-1">
+    <div class="container col-md-8 col-lg-7 col-xl-6 col-xxl-4 p-5 m-auto ">
       <div class="row mb-2 p-0 g-2">
         <div class="col-7">
           <input
@@ -61,8 +61,8 @@
           <tfoot class="table-secondary border-none">
             <tr>
               <th></th>
-              <th >Average</th>
-              <th></th>
+              <th  >Average</th>
+              <th id="avg"></th>
               <th></th>
             </tr>
           </tfoot>
