--- a/TVMAZE-API/index.html
+++ b/TVMAZE-API/index.html
@@ -69,7 +69,7 @@
             </ul>
             <form class="d-flex" role="search">
               <input
-                class="form-control me-2  border-dark text-light"
+                class="form-control me-2  border-dark text-dark"
                 type="search"
                 placeholder="Search Movies..."
                 aria-label="Search"
